@@ -27,7 +27,7 @@
  * @summary Tests problem with java.beans use of reflection
  * @modules java.base/sun.security.x509
  *          java.desktop
- * @run main/othervm Test6277246
+ * @run main/othervm -Djava.security.manager=allow Test6277246
  * @author Jeff Nisewanger
  */
 
